fixed errors in dark mode

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@
 
 * {
     box-sizing: border-box;
+    letter-spacing: .05rem;
+
 }
 
 body {
